manual\ru\blender

--- a/manual/ru/blender/Animation.html
+++ b/manual/ru/blender/Animation.html
@@ -32,13 +32,13 @@
     <h3>Объектная Анимация</h3>
 
     <p>
-    Ключевые кадры анимации могут быть добавлены в Blender стандартным путём: используя Object > Animation > Insert Keyframe... menu (или при нажатии горячей клавиши *I*), после чего, на временной шкале выбирается другой кадр, объект перемещается/вращается/масштабируется в новое положение и добавляется новый ключевой кадр для этой позиции.
+    Ключевые кадры анимации могут быть добавлены в Blender стандартным путём: Object > Animation > Insert Keyframe... menu (или при нажатии горячей клавиши *I*), после этого, на временной шкале выбирается другой кадр, объект перемещается/вращается/масштабируется и добавляется новый ключевой кадр для этих изменений.
     </p>
 
     <img src="files/animation-blender/insert-keyframe.jpg" alt="Inserting keyframes in Verge3D for Blender" class="centered" style="max-width: 1000px">
 
 
-    <p>Ознакомтесь со следующим обучающим видео:</p>
+    <p>Ознакомьтесь со следующим обучающим видео:</p>
 
     <iframe class="video-480p" src="https://www.youtube.com/embed/VkjEfSmI2xM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -49,7 +49,7 @@
     <h3>Скелетная Анимация</h3>
 
     <p>
-    Прискиннивание объекта в Blender выполняется с использованием <a href="https://docs.blender.org/manual/ru/latest/animation/armatures/index.html" target="_blank">Armature(каркас)</a>. Verge3D поддерживает максимум 4 веса на одну кость (взаимодействовать с костью будут только 4 веса с самым большим значением влияния, остальные будут проигнорированы). Кости каркаса могут быть заанимированы в *Pose Mode* (Ctrl-Tab), используя Pose > Animation > Insert Keyframe... menu (или горячая клавиша *I*),  после чего, на временной шкале выбирается другой кадр, кость перемещается/вращается/масштабируется и добавляется новый ключевой кадр для этой позиции.
+    Прискиннивание объекта в Blender выполняется с использованием <a href="https://docs.blender.org/manual/ru/latest/animation/armatures/index.html" target="_blank">Armature</a>. Verge3D поддерживает максимум 4 веса на одну кость (взаимодействовать с костью будут только 4 веса с самым большим значением влияния, остальные будут проигнорированы). Кости могут быть анимированы в *Pose Mode* (Ctrl+Tab), используя Pose > Animation > Insert Keyframe... menu (или горячая клавиша *I*), после чего, на временной шкале выбирается другой кадр, кость перемещается/вращается/масштабируется и с данными изменениями добавляется новый ключевой кадр.
     </p>
 
     <img src="files/animation-blender/skeletal-animation.jpg" alt="Inserting keyframes for skeletal animation in Verge3D for Blender" class="centered" style="max-width: 1000px">
@@ -57,16 +57,16 @@
 
     [anchor:Shape_Key_Animation]
 
-    <h3>Ключи формы или морфинг анимация</h3>
+    <h3>Ключи формы или Морфинг Анимация</h3>
 
     <p>
-    Вы можете добавить <a href="manual/ru/blender/Morphing.html">ключи формы</a> к объекту в Blender стандартным путём (пройдите по ссылке для более подробной информации).
+    В Blender вы можете добавить <b>ключи формы</b> к объекту стандартным путём (для получения более подробной информации пройдите по <a href="manual/ru/blender/Morphing.html">ссылке</a>).
     </p>
 
     <img src="files/animation-blender/shape-key-animation.jpg" alt="Shape key animation in Verge3D for Blender" class="centered" style="max-width: 889px">
 
     <p>
-    Значения ключей формы могут быть заанимированы в Blender нажатием ПКМ на Value и выборе *Insert Keyframe* (или при наведении на него курсора и нажатии горячей клавиши *I*), затем выбирается другой кадр на временной шкале, в поле ввода устанавливается новое значение Value и добавляется новый анимационный ключ для этого значения.
+    Значения ключей формы могут быть анимированы в Blender нажатием ПКМ на Value и выборе *Insert Keyframe* (или при наведении на него курсора и нажатии горячей клавиши *I*), затем выбирается другой кадр на временной шкале, в поле ввода устанавливается новое значение Value и добавляется новый анимационный ключ для этого значения.
     </p>
 
     <img src="files/animation-blender/shape-key-animation-insert-keyframe.jpg" alt="Inserting keyframes for shape key animation in Verge3D for Blender" class="centered" style="max-width: 199px">
@@ -77,13 +77,13 @@
     <h3>Анимация Материалов</h3>
 
     <p>
-    В отличие от Blender, в Verge 3D можно заанимировать только определенный параметр материала, подключив к нему ноду *Value* или *RGB*. 
+    В отличие от Blender, в Verge 3D можно анимировать только определённый параметр материала, подключив к нему ноду *Value* или *RGB*. 
     </p>
 
     <img src="files/animation-blender/node-material-animation.jpg" alt="Node material animation in Verge3D for Blender" class="centered" style="max-width: 1000px">
 
     <p>
-    Значения цветов заданные этими нодами могут быть заанимированы в Blender нажатием ПКМ на соответсвующую ноду (или при наведении на него курсора и нажатии горячей клавиши *I*), затем выбирается другой кадр на временной шкале, устанавливается новое значение или цвет которым добавляется анимационный ключ.
+    Значения цветов заданные этими нодами могут быть анимированы в Blender нажатием ПКМ на соответсвующую ноду (или при наведении на него курсора и нажатии горячей клавиши *I*), затем выбирается другой кадр на временной шкале, устанавливается новое значение или цвет, которым добавляется анимационный ключ.
     </p>
 
     <img src="files/animation-blender/node-material-animation-insert-keyframes.jpg" alt="Inserting keyframes for node material animation in Verge3D for Blender" class="centered" style="max-width: 200px">
@@ -122,7 +122,7 @@
     <p>
     <ul>
     <li>
-    *Auto Start* - начнется ли анимация этого объекта, как только сцена загрузится.
+    *Auto Start* - отвечает за начало проигрывания анимации при загрузке сцены.
     </li>
     <li>
     *Loop Mode* - режимы воспроизведения: *Repeat* - проигрывает анимацию от начала до конца, затем повторяет, *Once* - проигрывает один раз, затем останавливается, *Ping Pong* - проигрывает от начала до конца, затем воспроизводит анимацию в обратную сторону.
@@ -131,7 +131,7 @@
     *Repeat Infinitely* - если необходимо, чтобы анимация объекта проигрывалась бесконечно. Действительно только для режимов *Repeat* и *Ping Pong*.
     </li>
     <li>
-    *Repeat Count* - сколько раз будет проиграна анимация. Действительно только для *Repeat* и *Ping Pong* если режим *Repeat Infinitely* отключен.
+    *Repeat Count* - отвечает за количество раз, которое будет проиграна анимация. Действительно только для *Repeat* и *Ping Pong*, если режим *Repeat Infinitely* отключен.
     </li>
     <li>
     *Offset* - какое количество кадров должно быть пропущено перед началом воспроизведения анимации.
@@ -157,7 +157,7 @@
 
     [anchor:Frame_Rate]
 
-    <h3>Частота смены кадров</h3>
+    <h3>Частота Смены Кадров</h3>
 
     <p>
     Значение частоты смены кадров (по умолчанию - 24 fps) влияет на скорость воспроизведения и может быть изменено во вкладке *Output Properties*.
@@ -171,13 +171,13 @@
     <h2>Контроль Анимации с помощью Puzzles</h2>
 
     <p>
-    Вы можете использовать <a href="manual/ru/puzzles/Animation.html">animation puzzles</a> для воспроизведения предварительно созданной анимации (пройдите по ссылке для более подробной информации).
+    Вы можете использовать <b>animation puzzles</b> для воспроизведения предварительно созданной анимации (для получения более подробной информации пройдите по <a href="manual/ru/puzzles/Animation.html">ссылке</a>).
     </p>
 
     <img src="files/puzzles/puzzles-animation.jpg" alt="Animation puzzles of Verge3D" class="centered" style="max-width: 1000px">
 
     <p>
-    Анимация также может быть реализована с использованием других блоков визуальных сценариев - смотрите <a href="manual/ru/puzzles/Camera.html">Camera</a> и <a href="manual/ru/puzzles/Time.html">Time</a> puzzles.
+    Анимация также может быть реализована с использованием других блоков Puzzles - смотрите <a href="manual/ru/puzzles/Camera.html">Camera</a> и <a href="manual/ru/puzzles/Time.html">Time</a> puzzles.
     </p>
 
     <h2>Остались вопросы?</h2>
