--- a/manual/ru/blender/Beginners-Guide.html
+++ b/manual/ru/blender/Beginners-Guide.html
@@ -280,8 +280,7 @@
       Перейдите к главе <a href="manual/ru/introduction/Workflow.html"> Рабочий процесс </a>, чтобы получить более подробное руководство по использованию Verge3D.
     </p>
 
-
-    <h2>Все еще есть вопросы?</h2>
+    <h2>Остались вопросы?</h2>
 
     <p>Задавайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
