--- a/manual/ru/blender/Camera.html
+++ b/manual/ru/blender/Camera.html
@@ -48,9 +48,9 @@
 
     <p>*Clip Start* и *Clip End* - диапазон видимости камеры.</p>
 
-    <p>*Sensor Fit* - как окно просмотра будет реагировать на изменения размеров (или ориентации устройства).</p>
+    <p>*Sensor Fit* - как вьюпорт будет реагировать на изменения размеров (или ориентации устройства).</p>
 
-    <p>*Controls* - указывает какой тип контроля будет приминён к камере в Verge3D:</p>
+    <p>*Controls* - указывает какой тип контроля будет применён к камере в Verge3D:</p>
 
     <ul>
       <li>*Orbit* - вид с камеры перемещаемой вокруг цели.</li>
@@ -79,10 +79,10 @@
       *Min Zoom* и *Max Zoom* - пределы увеличения для орфографической камеры.
     </p>
     <p>
-      *Vertical Rotation Limits*: *Min Angle* и *Max Angle* - ограничения вертикального угла.
+      *Vertical Rotation Limits*: *Min Angle* и *Max Angle* - ограничения угла вращения по вертикали.
     </p>
     <p>
-      *Horizontal Rotation Limits*: *Min Angle* и *Max Angle* - ограничения горизонтального угла.
+      *Horizontal Rotation Limits*: *Min Angle* и *Max Angle* - ограничения угла вращения по горизонтали.
     </p>
 
 
@@ -94,7 +94,7 @@
 
     <p>*Gaze Level* - "взгляд" камеры от первого лица (на уровне глаз).</p>
 
-    <p>*Story Height* - высота сюжета.</p>
+    <p>*Story Height* - этаж сюжета.</p>
 
 
     [anchor:camera_control_with_puzzles]
