--- a/manual/ru/blender/Installation.html
+++ b/manual/ru/blender/Installation.html
@@ -16,7 +16,7 @@
 
     [anchor:Prerequisites]
 
-    <h2>Предпосылки</h2>
+    <h2>Необходимые Условия</h2>
 
     <p>
       Verge3D может работать поверх Blender, пакета 3D-моделирования и анимации с открытым исходным кодом, который необходимо установить первым (мы поддерживаем версии 2.80–2.83). Вы можете бесплатно загрузить Blender с <a href="https://www.blender.org/download/" target="_blank"> официального сайта </a>.
