--- a/manual/ru/blender/Material-Library.html
+++ b/manual/ru/blender/Material-Library.html
@@ -145,7 +145,7 @@
     <img src="files/mat-library-blender/texture-file-paths.jpg" class="centered" style="max-width: 909px">
 
     <p>
-    Если окажется, что путь к текстуре указан из папки библиотеки материалов, используйте меню *Image / Save As* чтобы сохранить её в папке приложения.
+    Если окажется, что путь к текстуре указан из папки библиотеки материалов, используйте меню *Image / Save As*, чтобы сохранить её в папке приложения.
     </p>
 
     <img src="files/mat-library-blender/texture-file-paths2.jpg" class="centered" style="max-width: 909px">
