--- a/manual/ru/blender/Morphing.html
+++ b/manual/ru/blender/Morphing.html
@@ -14,7 +14,7 @@
 
     <p>Ключи формы (в Verge3D называются морфинг) это свойство, которое позволяет изменять объект в реальном времени. Наиболее распространенным вариантом использования ключей формы является создание параметрических объектов, у которых могут изменяться размеры, форма, толщина, отверстия, контуры и др.</p>
 
-    <p>Для примера ознакомьтесь с видео приведенным ниже:</p>
+    <p>Для примера ознакомьтесь с видео приведённым ниже:</p>
 
     <iframe class="video-480p" src="https://www.youtube.com/embed/5TbRgUcjwa4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
