--- a/manual/ru/blender/Object-Constraints.html
+++ b/manual/ru/blender/Object-Constraints.html
@@ -11,7 +11,7 @@
   <body><article>
 
 
-    <h1>Ограничения Объектов / Blender</h1>
+    <h1>Object-Constraints(Ограничения Объектов) / Blender</h1>
 
     <p>
       Данная страница содержит информацию об <a href="https://docs.blender.org/manual/ru/latest/animation/constraints/index.html" target="_blank">ограничениях</a> объектов в Blender, которые могут быть использованы в Verge3D.
@@ -34,7 +34,7 @@
     <h3>Copy Location</h3>
 
     <p>
-      Данное ограничение заставляет объект, к которому оно применено, иметь такое же местоположение как у его цели.
+      Данное ограничение заставляет объект, к которому оно применено, иметь такое же местоположение, как у его цели.
     </p>
 
     <img src="files/constraints-blender/copy-location.jpg" class="centered" style="max-width: 383px">
@@ -46,7 +46,7 @@
     <h3>Copy Rotation</h3>
 
     <p>
-      Данное ограничение заставляет объект, к которому оно применено, иметь такое же вращение как у его цели.
+      Данное ограничение заставляет объект, к которому оно применено, иметь такой же поворот, как у его цели.
     </p>
 
     <img src="files/constraints-blender/copy-rotation.jpg" class="centered" style="max-width: 383px">
@@ -58,7 +58,7 @@
     <h3>Copy Scale</h3>
 
     <p>
-      Данное ограничение заставляет объект, к которому оно применено, иметь такой же масштаб как у его цели.
+      Данное ограничение заставляет объект, к которому оно применено, иметь такой же масштаб, как у его цели.
     </p>
 
     <img src="files/constraints-blender/copy-scale.jpg" class="centered" style="max-width: 383px">
@@ -70,7 +70,7 @@
     <h3>Copy Transforms</h3>
 
     <p>
-      Данное ограничение заставляет объект, к которому оно применено, трансформироваться также как и его цель.
+      Данное ограничение заставляет объект, к которому оно применено, трансформироваться также, как и его цель.
     </p>
 
     <img src="files/constraints-blender/copy-transforms.jpg" class="centered" style="max-width: 383px">
@@ -130,7 +130,7 @@
     <h3>Locked Track</h3>
 
     <p>
-    Данное ограничение работает как ограничение *Track To*, но с фиксированной осью. 
+    Данное ограничение работает, как ограничение *Track To*, но с фиксированной осью. 
     </p>
 
     <img src="files/constraints-blender/locked-track.jpg" class="centered" style="max-width: 383px">
@@ -142,7 +142,7 @@
     <h3>Child Of</h3>
 
     <p>
-    Данное ограничение является вариантом стандартных взаимоотношений родители/дети между объектами.
+    Данное ограничение является вариантом стандартных взаимоотношений типа родитель/потомок между объектами.
     </p>
 
     <img src="files/constraints-blender/child-of.jpg" class="centered" style="max-width: 383px">
