--- a/manual/ru/blender/Shader-Nodes-Reference.html
+++ b/manual/ru/blender/Shader-Nodes-Reference.html
@@ -14,7 +14,7 @@
     <h1>Примеры Шейдерных Нод / Blender</h1>
 
     <p>
-    В какой-то степени Verge3D поддерживает практически все ноды содержащиеся в Blender Shader Editor. Однако для большинства веб-задач связанных с рендером в реальном времени ограниченного набора шейдерных нод будет достаточно. Ниже мы перечислим те из них, которые используются в демонстрационных проектах Verge3D.
+    Verge3D поддерживает практически все ноды, содержащиеся в Blender Shader Editor. Однако для большинства веб-задач связанных с рендером в реальном времени ограниченного набора шейдерных нод будет достаточно. Ниже мы перечислим те из них, которые используются в демонстрационных проектах Verge3D.
     </p>
 
     <p>
@@ -781,7 +781,7 @@
     <img src="files/shader-nodes-reference-blender/vector-curves.jpg" class="centered" style="max-width: 1000px">
 
     </p>
-    Чтобы узнать больше информации о ноде *Normal Map*, ознакомьтесь с руководством Blender, пройдя по следующей 
+    Чтобы узнать больше информации о ноде *Vector Curves*, ознакомьтесь с руководством Blender, пройдя по следующей 
         <a href="https://docs.blender.org/manual/ru/latest/render/shader_nodes/vector/curves.html" target="_blank">link</a>.
     </p>
 
