--- a/manual/ru/blender/Transparency.html
+++ b/manual/ru/blender/Transparency.html
@@ -13,7 +13,7 @@
     <h1>Прозрачность / Blender</h1>
 
     <p>
-      В этой статье мы покажем вам как включить прозрачность для Eevee/Cycles и glTF-совместимых материалов в Blender.
+      В этой статье мы покажем вам, как включить прозрачность для Eevee/Cycles и glTF-совместимых материалов в Blender.
     </p>
 
     [contents]
@@ -21,16 +21,16 @@
 
     [anchor:blended_vs_masked]
 
-    <h2>Альфа-смешение или Альфа-обрезка</h2>
+    <h2>Blended (смешение) или Masked (обрезка)</h2>
 
     <p>
-      Verge3D, являясь 3D движком работающим в реальном времени,  предлагает два метода работы с прозрачными объектами: alpha blending и alpha clipping (обычно с изображением-маской). Альфа-смешение позволяет комбинировать полупрозрачный цвет переднего плана с цветом фона, используя альфа-канал в качестве фактора смешивания. Альфа-обрезка действует по принципу отбрасывания всех пикселей альфа канала меньше заданного порога (по умолчанию 0, но может быть изменено в настройках материала).
+      Verge3D, являясь 3D движком, работающим в реальном времени, предлагает два метода работы с прозрачными объектами: alpha blending и alpha clipping (обычно с изображением-маской). Alpha blending позволяет комбинировать полупрозрачный цвет переднего плана с цветом фона, используя альфа-канал в качестве фактора смешивания. Alpha clipping действует по принципу отбрасывания всех пикселей альфа канала меньше заданного порога (по умолчанию 0, но может быть изменено в настройках материала).
     </p>
 
     <img src="files/transparency-common/blending-vs-clipping.jpg">
 
     <p>
-      Альфа-смешение дороже, чем альфа-обрезка с точки зрения оптимизации, но обеспечивает мягкие переходы, которые выглядят красивее. Смешение также может вызвать артефакты связанные с Z-конфликтом, когда полигоны визуализируются в неправильном порядке. Обрезка лучше всего подходит для визуализации многочисленных небольших предметов (таких как трава или листья деревьев). Она также создает жёсткие края, которые не могут быть сглажены.
+      Alpha blending дороже, чем  Alpha clipping с точки зрения оптимизации, но обеспечивает мягкие переходы, которые выглядят красивее. Alpha blending также может вызвать артефакты связанные с Z-конфликтом, когда полигоны визуализируются в неправильном порядке. Alpha clipping лучше всего подходит для визуализации многочисленных небольших предметов (таких как трава или листья деревьев). Она также создает жёсткие края, которые не могут быть сглажены.
     </p>
 
     [anchor:alpha_add]
@@ -38,7 +38,7 @@
     <h2>Additive Composing (также известный как No Depth Writes)</h2>
 
     <p>
-      Verge3D также предлагает специальный режим, для отключения буфера глубины во время рендеринга . Это приводит к отмене сравнения значений глубины пикселей перекрываемых полигонов. Такие полигоны будут визуализированы аддитивным способом, который иногда позволяет избавиться от артефактов альфа-смешения.
+      Verge3D также предлагает специальный режим, для отключения буфера глубины во время рендеринга. Это приводит к отмене сравнения значений глубины пикселей перекрываемых полигонов. Такие полигоны будут визуализированы аддитивным способом, который иногда позволяет избавиться от артефактов альфа-смешения.
     </p>
 
     <img src="files/transparency-common/no-depth-writes.jpg">
@@ -62,7 +62,7 @@
     <img src="files/transparency-blender/rendering-order.jpg" class="centered" style="max-width: 306px">
 
     <p>
-      Поэтому, если требуется чтобы прозрачные объекты на фоне которых в сцене присутствует другой объект, отображались корректно, установите любое отрицательное значение для объекта расположенного сзади.
+      Поэтому, если требуется, чтобы прозрачные объекты на фоне которых в сцене присутствует другой объект, отображались корректно, установите любое отрицательное значение для объекта расположенного сзади.
     </p>
 
     <img src="files/transparency-common/rendering-order-example.jpg">
