--- a/manual/ru/blender/GLTF-Materials.html
+++ b/manual/ru/blender/GLTF-Materials.html
@@ -10,7 +10,7 @@
   </head>
   <body><article>
 
-    <h1>glTF Материалы (PBR совместимый glTF 2.0) / Blender</h1>
+    <h1>glTF Материалы (PBR совместимый с glTF 2.0) / Blender</h1>
 
     <p>
     Если вам <a href="manual/ru/introduction/FAQ.html#gltf_materials">по какой-то причине</a> требуется, чтобы материал был совместим с форматом glTF 2.0, вы можете использовать простые настройки на основе шейдерной ноды *Principled BSDF*.
@@ -24,7 +24,7 @@
 
     <h2>Упаковка Текстур</h2>
 
-    <p>Стандарты glTF 2.0 требуют, чтобы вы упаковали все компоненты PBR материала в одно изображение (также известное, как ORM текстура):</p>
+    <p>Стандарты glTF 2.0 требуют, чтобы определённые компоненты PBR материала были упакованы в одно изображение (также известное, как ORM текстура):</p>
 
     <ul>
       <li>Фактор Occlusion упаковывается в R канал. Также есть возможность упаковать текстуру окклюзии отдельно, но упаковка позволяет использовать меньше текстур и благодаря этому оптимизировать сцену.</li>
@@ -38,13 +38,13 @@
     <h2>Настройки</h2>
 
     <p>
-      Добавьте шейдерную ноду *Princlipled BSDF* в ваш материал, и в панели настроек *Verge3D Settings* включите функцю *glTF 2.0 compatible*.
+      Добавьте шейдерную ноду *Princlipled BSDF* в ваш материал и включите функцю *glTF 2.0 compatible* в панели настроек *Verge3D Settings*.
     </p>
 
     <img src="files/physical-material-blender/phmat_00.png" class="centered" style="max-width: 661px;">
 
     <p>
-      Вы можете подключить текстурные ноды к *Princlipled BSDF* как описано ниже. Обращаем ваше внимание, что необязательно подключать все текстуры как на изображении, вы можете обойтись только теми, которые необходимы именно в вашем проекте.
+      Вы можете подключить текстурные ноды к *Princlipled BSDF*, как описано ниже. Обращаем ваше внимание, что необязательно подключать все текстуры, как на изображении, вы можете обойтись только теми, которые необходимы именно в вашем проекте.
     </p>
 
     <img src="files/physical-material-blender/gltf-material-example.jpg" class="centered" style="max-width: 820px;">
@@ -57,18 +57,18 @@
         Подключите ноду *Separate RGB* к *Image Texture* и выведете соответствующие цветовые каналы во входы *Metallic* и *Roughness* ноды *Principled BSDF*.  Для оптимальной загрузки рендера PBR шейдера следует упаковать текстуры occlusion, roughness и metallic в R, G и B каналы одной единственной текстуры соответственно. Чтобы корректно настроить отображение окклюзии, R канал текстуры следует подключить как фактор в ноду Mix Shader для смешивания с шейдерной нодой Diffuse черного цвета. В настройках текстуры *Color Space* должно быть выставлено значение *Non-Color*.
       </li>
       <li>
-        Подключите ноду *Image Texture* с текстурой нормалей в ноду *Normal Map*, а ноду *Normal Map* во вход *Normal* ноды *Principled BSDF*. В настройках текстуры *Color Space* должно быть выставлено значение *Non-Color*. Также вы можете настроить фактор силы для normal map используя ползунок *Strength*.
+        Подключите ноду *Image Texture* с текстурой нормалей в ноду *Normal Map*, а ноду *Normal Map* во вход *Normal* ноды *Principled BSDF*. В настройках текстуры *Color Space* должно быть выставлено значение *Non-Color*. Также вы можете настроить фактор силы для normal map, используя ползунок *Strength*.
       </li>
       <li>
-        Подключите ноду *Image Texture* к *Principled BSDF* используя вход *Emission*. В настройках текстуры *Color Space* должно быть выставлено значение *sRGB*.
+        Подключите ноду *Image Texture* к *Principled BSDF*, используя вход *Emission*. В настройках текстуры *Color Space* должно быть выставлено значение *sRGB*.
       </li>
     </ul>
 
-    <p>Если вам нужно настроить текстуру *Base Color*, например сделать её темнее или смешать с другим цветом, используйте ноду *Multiply* как показано на изображении ниже:</p>
+    <p>Если вам нужно настроить текстуру *Base Color*, например сделать её темнее или смешать с другим цветом, используйте ноду *Multiply*, как показано на изображении ниже:</p>
 
     <img src="files/physical-material-blender/gltf-material-color-factor.jpg" class="centered" style="max-width: 844px;">
 
-    <p>Вы также можете использовать вход *Alpha* чтобы настроить прозрачность своего материала.</p>
+    <p>Вы также можете использовать вход *Alpha*, чтобы настроить прозрачность своего материала.</p>
 
     <p>
       Чтобы узнать как выглядит *Principled BSDF* в окне просмотра Blender, вы можете переключить режим отображения *3D View* на *Rendering* или открыть сцену в Verge3D с помощью кнопки *Sneak Peak*, расположенной на той же панели.
@@ -79,11 +79,11 @@
 
     <h2>Экспорт Текстур из Substance Painter</h2>
 
-    <p>Модели и запеченные карты нормалей и окклюзии (если они есть) могут быть открыты в Substance Painter через формат OBJ.</p>
+    <p>Модели, запечённые карты нормалей и окклюзии (если они есть) могут быть открыты в Substance Painter через формат OBJ.</p>
 
     <img src="files/physical-material-blender/substance_screenshot.jpg" class="centered" style="max-width: 819px;">
 
-    <p>На выходе в этой программе создаются три карты:base color/transparency, occlusion/roughness/metallic и normal.</p>
+    <p>На выходе в этой программе создаются три карты: base color/transparency, occlusion/roughness/metallic и normal.</p>
 
     <img src="files/physical-material-blender/pbr_texture_set_preview.jpg" class="centered" style="max-width: 819px;">
 
