manual\ru\blender (last edits)
+ manual\ru\max\Beginners-Guide.html

--- a/manual/ru/blender/Beginners-Guide.html
+++ b/manual/ru/blender/Beginners-Guide.html
@@ -23,7 +23,7 @@
     <h2>Установка</h2>
 
     <p>
-    Подробная информация об установки программы <a href="manual/ru/blender/Installation.html">здесь</a>.
+    Подробная информация об установке программы <a href="manual/ru/blender/Installation.html">здесь</a>.
     </p>
 
 
@@ -47,7 +47,7 @@
     <h2>App Manager (менеджер приложений)</h2>
 
     <p>
-      Конечно, вы можете сначала начать работу с графикой, а позже создать проект Verge3D, но мы рекомендуем вам с самого начала привыкнуть к менеджеру приложений. Таким образом вы убедитесь, что ваши файлы правильно организованы и хранятся в одной папке, что важно для целостности проекта, особенно если вы планируете передать его третьему лицу.
+      Конечно, вы можете сначала начать работу с графикой, а позже создать проект Verge3D, но мы рекомендуем вам с самого начала привыкнуть к менеджеру приложений. Таким образом вы убедитесь, что ваши файлы правильно организованы и хранятся в одной папке, что важно для целостности проекта, особенно если вы планируете передать его третьим лицам.
     </p>
 
     <p>
@@ -274,7 +274,7 @@
 
     [anchor:whats_next]
 
-    <h2>Что дальше</h2>
+    <h2>Что дальше?</h2>
 
     <p>
       Перейдите к главе <a href="manual/ru/introduction/Workflow.html"> Рабочий процесс </a>, чтобы получить более подробное руководство по использованию Verge3D.
