--- a/manual/ru/blender/Installation.html
+++ b/manual/ru/blender/Installation.html
@@ -19,7 +19,7 @@
     <h2>Необходимые Условия</h2>
 
     <p>
-      Verge3D может работать поверх Blender, пакета 3D-моделирования и анимации с открытым исходным кодом, который необходимо установить первым (мы поддерживаем версии 2.80–2.83). Вы можете бесплатно загрузить Blender с <a href="https://www.blender.org/download/" target="_blank"> официального сайта </a>.
+      Verge3D может работать поверх Blender, пакета 3D-моделирования и анимации с открытым исходным кодом, который необходимо установить первым (поддерживаются версии 2.83+). Вы можете бесплатно загрузить Blender с <a href="https://www.blender.org/download/" target="_blank"> официального сайта </a>.
     </p>
 
 
@@ -107,15 +107,15 @@
       Установка завершена!
     </p>
 
-    <h2>Что дальше</h2>
+    <h2>Что дальше?</h2>
 
     <p>
       Ознакомьтесь с <a href="manual/ru/blender/Beginners-Guide.html"> основами </a>!
     </p>
 
-    <h2>Все еще есть вопросы?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Задавайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
