--- a/manual/ru/blender/Shader-Nodes-Reference.html
+++ b/manual/ru/blender/Shader-Nodes-Reference.html
@@ -1167,7 +1167,7 @@
 
     <h3>Медленные Процедурные Текстуры</h3>
 
-    <p>There are procedural textures that have reduced performance:</p>
+    <p>Существуют процедурные текстуры, которые снижают производительность:</p>
 
     <ul>
       <li>*Noise Texture*, особенно с высоким значеним *Detail* (16 приведёт к сбою в производительности).</li>
