manual\ru\max\Animation.html
manual\ru\max\Animation.html

--- a/manual/ru/max/Animation.html
+++ b/manual/ru/max/Animation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D for 3ds Max: Animation - Soft8Soft</title>
+    <title>Verge3D для 3ds Max: Анимация - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Find out how to create and control animation in Verge3D for 3ds Max. Whole-object, skeletal, blend shapes and procedural animation types explained."/>
     <base href="../../../" />
@@ -10,10 +10,10 @@
   </head>
   <body><article>
 
-    <h1>Animation / 3ds Max</h1>
+    <h1>Анимация / 3ds Max</h1>
 
     <p>
-      This page contains the information about 3ds Max's animation types which can be used with Verge3D, as well as supported playback options and means to control the animation interactively.
+      Эта страница содержит информацию о типах анимации в 3ds Max, которые можно использовать в Verge3D, а также о поддерживаемых вариантах воспроизведения и средствах интерактивного управления анимацией. 
     </p>
 
     [contents]
@@ -21,21 +21,21 @@
 
     [anchor:setting_up_max]
 
-    <h2>Setting Up in 3ds Max</h2>
+    <h2>Настройки в 3ds Max</h2>
 
 
     [anchor:whole_object_animation]
 
-    <h3>Whole-Object Animation</h3>
+    <h3>Объектная Анимация</h3>
 
     <p>
-      Animation keyframes can be added in standard way in 3ds Max, by using the <strong>Set Keys</strong> button or pressing *K* on the keyboard.
+      Ключевые кадры анимации можно добавить стандартным способом в 3ds Max, используя кнопку <strong>Set Keys</strong> или нажав *K* на клавиатуре.
     </p>
 
     <img src="files/animation-max/insert-keyframe.jpg" alt="Inserting keyframes in Verge3D for 3ds Max" class="centered" style="max-width: 600px">
 
     <p>
-      For performance reasons, we recommend setting keys separately, only for channels which are required to be animated, e.g:
+      По соображениям производительности мы рекомендуем устанавливать ключи отдельно только для тех каналов, которые должны быть анимированы, например:
     </p>
 
     <img src="files/animation-max/insert-keyframe-separate.jpg" class="centered" style="max-width: 475px">
@@ -43,25 +43,25 @@
 
     [anchor:skeletal_animation]
 
-    <h3>Skeletal Animation</h3>
+    <h3>Скелетная Анимация</h3>
 
     <p>
-      An object can be animated in Verge3D by using 3ds Max's skin modifier. Verge3D support maximum 4 weights per joint (4 most influential weights are selected, others are ignored).
+      Объект может быть анимирован в Verge3D с помощью модификатора skin в 3ds Max. Verge3D поддерживает максимум 4 веса на кость (выбираются 4 наиболее влиятельных веса, остальные игнорируются). 
     </p>
 
     <img src="files/animation-max/skeletal-animation.jpg" alt="Inserting keyframes for skeletal animation in Verge3D for 3ds Max" class="centered" style="max-width: 875px">
 
     <p>
-      Skeletons can be animated directly by setting transformation keys on bones or by utilizing auxiliary controllers such as IK solvers. To animate bones indirectly, enable *Skeleton Root* and *Custom Frame Range* properties on their common parent object and set proper *From*/*To* as frame values. See <a href="manual/ru/max/Animation.html#verge3d_per_object_settings">below</a> for more info.
+      Скелет можно анимировать напрямую, устанавливая ключи трансформации на костях или используя вспомогательные контроллеры, такие как IK solvers. Чтобы анимировать кости косвенно, включите свойства *Skeleton Root* и *Custom Frame Range* на их общем родительском объекте и установите соответствующие значения *From*/*To* в качестве значений кадров. Более подробную информацию смотрите <a href="manual/ru/max/Animation.html#verge3d_per_object_settings">ниже</a>.
     </p>
 
 
     [anchor:material_animation]
 
-    <h3>Material Animation</h3>
+    <h3>Анимация Материалов</h3>
 
     <p>
-      To use keyframed material animation, simply set keys on any material controller.
+      Чтобы использовать анимацию материала с ключевыми кадрами, просто установите ключи на любом контроллере материала.
     </p>
 
     <img src="files/animation-max/material-animation.jpg" alt="Animating materials in Verge3D for 3ds Max" class="centered" style="max-width: 763px">
@@ -69,10 +69,10 @@
 
     [anchor:procedural_animation]
 
-    <h3>Procedural Animation</h3>
+    <h3>Процедурная Анимация</h3>
 
     <p>
-      Instead of playing back some animation which was pre-made in 3ds Max, you can use Puzzles or JavaScript to modify coordinates or some other parameters with time. Particularly, the <a href="manual/ru/puzzles/Animation.html#animate_param">animate param</a> puzzle (based on the Tween.js library) is a convenient way to create your own animation on the fly.
+      Вместо того чтобы воспроизводить анимацию, заранее созданную в 3ds Max, вы можете использовать пазлы или JavaScript для изменения координат или некоторых других параметров связанных со временем. В частности, пазл <a href="manual/ru/puzzles/Animation.html#animate_param">animate param</a> (основанный на библиотеке Tween.js) является удобным способом создания собственной анимации на лету.
     </p>
 
     <img src="files/puzzles/puzzles-animation-animate-param.jpg" alt="Using the animate param puzzle to create animation in Verge3D for 3ds Max" class="centered" style="max-width: 1000px">
@@ -80,14 +80,14 @@
 
     [anchor:playback_options]
 
-    <h2>Playback Options</h2>
+    <h2>Параметры Воспроизведения</h2>
 
     [anchor:verge3d_global_settings]
 
-    <h3>Verge3D Global Animation Settings</h3>
+    <h3>Глобальные Настройки Анимации Verge3D</h3>
 
     <p>
-      By using the *Animation* section of *Verge3D Export Settings* you can assign global animation parameters which will affect all animatable objects in your scene.
+      С помощью *Animation*, раздела *Verge3D Export Settings* вы можете назначить глобальные параметры анимации, которые будут влиять на все анимируемые объекты в вашей сцене.
     </p>
 
     <img src="files/animation-max/global-animation-settings.jpg" alt="Verge3D for 3ds Max animation settings panel" class="centered" style="max-width: 930px">
@@ -97,28 +97,28 @@
         Export Animations
       </dt>
       <dd>
-        export scene animations to be used in Verge3D.
+        экспортировать анимацию сцены для использования в Verge3D. .
       </dd>
       <dt>
         Export Within Playback Range
       </dt>
       <dd>
-        by default Verge3D exporter honors per-object animation keyframe ranges. Enabling this option will force exporter to honor global playback range.
+        по умолчанию экспортер Verge3D учитывает диапазоны ключевых кадров анимации каждого объекта. Включение этого параметра заставит экспортер учитывать глобальный диапазон воспроизведения.
       </dd>
       <dt>
         Keyframes Start with 0
       </dt>
       <dd>
-        edit exported animation keyframes so they always start with frame 0.
+        редактировать экспортированные ключевые кадры анимации, чтобы они всегда начинались с кадра 0.
       </dd>
     </dl>
 
     [anchor:verge3d_per_object_settings]
 
-    <h3>Verge3D Per-Object Animation Settings</h3>
+    <h3>Настройки Анимации в Verge3D для Каждого Объекта</h3>
 
     <p>
-      Each object in 3ds Max is assigned with Verge3D settings, including the settings for animation playback.
+      Каждому объекту в 3ds Max назначаются настройки Verge3D, включая настройки для воспроизведения анимации.
     </p>
 
     <img src="files/animation-max/object-animation-settings.jpg" alt="Verge3D for 3ds Max animation settings panel" class="centered" style="max-width: 316px">
@@ -132,53 +132,53 @@
         Auto Start
       </dt>
       <dd>
-        whether this object's animation will start after the scene is loaded.
+        начнется ли анимация этого объекта после загрузки сцены. 
       </dd>
       <dt>
         Loop Mode
       </dt>
       <dd>
-        playback mode: *Repeat* - plays from the start to the end and repeats, *Once* - plays one time and stops, *Ping Pong* - plays from the start to the end and then in reverse.
+        режим воспроизведения: *Repeat* - воспроизводится с начала до конца и повторяется, *Once* - воспроизводится один раз и останавливается, *Ping Pong* - воспроизводится с начала до конца, а затем наоборот.
       </dd>
       <dt>
         Repeat Infinitely
       </dt>
       <dd>
-        whether this object's animation will be played all over again. Valid only for *Repeat* and *Ping Pong* modes.
+        будет ли анимация этого объекта воспроизводиться заново. Действует только для режимов *Повтор* и *Пинг-понг*.
       </dd>
       <dt>
         Repeat Count
       </dt>
       <dd>
-        how many times the animation will be played. Valid only for *Repeat* and *Ping Pong* modes if *Repeat Infinitely* is disabled.
+        сколько раз будет воспроизводиться анимация. Действует только для режимов *Повтор* и *Пинг-понг*, если отключена функция *Повторять бесконечно*.
       </dd>
       <dt>
         Offset
       </dt>
       <dd>
-        how many frames will be skipped before the animation starts.
+        сколько кадров будет пропущено перед началом анимации.
       </dd>
       <dt>
         Custom Frame Range
       </dt>
       <dd>
-        enable and specify *From*/*To* values to override object's keyframe ranges or global animation timeline. Activating this property will force an object to be animated even if it does not have any keyframes. This is useful to bake indirect animation such as IK handles/effectors affecting bones movements.
+        включить и указать значения *From*/*To*, чтобы переопределить диапазоны ключевых кадров объекта или глобальную временную шкалу анимации. Активация этого свойства заставит объект быть анимированным, даже если у него нет ключевых кадров. Это полезно для запекания косвенной анимации, такой как IK-handles/effectors, влияющие на движения костей.
       </dd>
       <dt>
         Skeleton Root
       </dt>
       <dd>
-        consider object a skeleton root, e.g make all child bones inherit animation parameters from that object.
+        считать объект корнем скелета, например, сделать так, чтобы все дочерние кости наследовали параметры анимации от этого объекта.
       </dd>
     </dl>
 
 
     [anchor:frame_rate]
 
-    <h3>Frame Rate</h3>
+    <h3>Частота Кадров</h3>
 
     <p>
-      The frame rate value (default - NTSC or 29.97 fps) which affect the playback speed can be changed using the *Time Configuration* panel.
+      Значение частоты кадров (по умолчанию - NTSC или 29,97 кадров в секунду), влияющее на скорость воспроизведения, можно изменить с помощью панели *Конфигурация времени*.
     </p>
 
     <img src="files/animation-max/frame-rate.jpg" alt="Frame rate selector in Verge3D for 3ds Max" class="centered" style="max-width: 844px">
@@ -186,21 +186,21 @@
 
     [anchor:animation_control_with_puzzles]
 
-    <h2>Animation Control with Puzzles</h2>
+    <h2>Контроль Анимации с помощью Puzzles</h2>
 
     <p>
-      You can use <a href="manual/ru/puzzles/Animation.html">animation puzzles</a> for playing back a pre-made animation (click on the link for more details).
+      Вы можете использовать <strong>animation puzzles</strong> для воспроизведения предварительно созданной анимации (для получения более подробной информации пройдите по <a href="manual/ru/puzzles/Animation.html">ссылке</a>).
     </p>
 
     <img src="files/puzzles/puzzles-animation.jpg" alt="Animation puzzles of Verge3D" class="centered" style="max-width: 1000px">
 
     <p>
-      Animation can also be implemented with other visual scripting blocks - see <a href="manual/ru/puzzles/Camera.html">Camera</a> and <a href="manual/ru/puzzles/Time.html">Time</a> puzzles.
+      Анимация также может быть реализована с использованием других блоков Puzzles - смотрите пазлы <a href="manual/ru/puzzles/Camera.html">Camera</a> и <a href="manual/ru/puzzles/Time.html">Time</a>.
     </p>
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
